# migration

./: .gitignore  .task-complete  GITHUB_ACTIONS_UPDATE.md  LICENSE  README.md  TASK_COMPLETION_SUMMARY.md  WIKI_REMEDIATION_REPORT.md  _config.yml  download_trends.sh  index.html  pyproject.toml  report.md  requirements.txt  run.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  wiki-sync.yml
notebooks/: __init__.ipynb  eda_migration copy.ipynb  eda_migration.ipynb  eda_migration_enhanced.ipynb  events_analysis.ipynb  migration.ipynb  ts_trends_analysis.ipynb
reports/: ARCHITECTURE_COMPARISON.md  Migration Slides Explained.md  Migration_report.aux  Migration_report.bbl  Migration_report.md  Migration_report.out  Migration_report.tex  Migration_report.tex.bak  Migration_report.toc  events_analysis.md  exchange_analysis.md  model_benchmarking_report.md  references.bib  repo_health_audit.md  trends_analysis.md
scripts/: check_dependency_consistency.py  profile_trt_engines.py  sync_github_wiki.py  validate_wiki_export.py  validate_wiki_links.py  wiki_common.py
src/: main.py
src/analysis/: event_visa_analysis.py  events.py  exchange_rate.py  label_events_with_led.py  plots.py  trends_analysis.py  utils.py
src/collection/: config.py  encounter.py  hf_sync.py  news.py  news_queries.json  trend_queries  trends.py  utils.py  visa.py
src/models/: embedding.py  flant5_engine.py  inference.py  jinav5_engine.py  led_engine.py  surge_metrics.py  surge_model.py  tensorrt_engine.py  train_and_evaluate.py  utils.py
src/processing/: build_panel.py  maps.json  merge.py  news.py  parse.py  prompts.py  run_summarization.py  summarize.py  utils.py
wiki/: Home.md  _Sidebar.md  glossary.md  index.md  project-overview.md
wiki/.obsidian/: app.json  graph.json
wiki/analysis/: cross-correlation.md  event-clustering.md  lead-lag-analysis.md  multiple-comparison-correction.md  sentiment-analysis.md  surge-detection.md
wiki/data-sources/: encounter-data.md  exchange-rates.md  google-news.md  google-trends.md  visa-data.md
wiki/findings/: event-visa-findings.md  exchange-rate-findings.md  model-performance.md
wiki/infrastructure/: gpu-acceleration.md  reproducibility.md
wiki/models/: flan-t5-summarization.md  horizon-aware-ensemble.md  jina-v5-embeddings.md  lstm.md  random-forest.md  surge-joint-loss.md  transformer.md
wiki/modules/: analysis-module.md  build-panel-detail.md  collection-module.md  hf-sync.md  main-entrypoint.md  models-module.md  news-scraper.md  pdf-parser.md  processing-module.md  tensorrt-engines.md
wiki/pipeline/: data-collection.md  data-processing.md  inference-pipeline.md  nlp-enrichment.md  panel-construction.md  training-pipeline.md
