[project]
name = "migration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "camelot-py>=1.0.9",
    "httpx>=0.28.1",
    "indicators-cli>=1.2.9",
    "ipykernel>=7.2.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "polars>=1.38.1",
    "pygooglenews>=0.1.3",
    "pytrends>=4.9.2",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "trafilatura>=2.0.0",
]
