[tool.uv]
# Restrict resolution to your actual target platform
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[tool.uv.sources]
cuml-cu12 = { index = "nvidia" }

[project]
name = "migration"
version = "0.1.0"
description = "A project to predict migration surges in the US"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "altair>=6.0.0",
    "beautifulsoup4>=4.14.3",
    "cuml-cu12>=25.2",
    "httpx>=0.28.1",
    "huggingface-hub>=1.7.2",
    "indicators-cli>=1.2.9",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=1.24,<2.1",
    "pandas>=2.2,<2.4",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pycuda>=2026.1",
    "pygooglenews>=0.1.3",
    "pymupdf>=1.27.2",
    "pymupdf-layout>=1.27.2",
    "pytrends>=4.9.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tensorrt>=10.0.0",
    "torch>=2.0.0",
    "tqdm>=4.67.3",
    "trafilatura>=2.0.0",
    "transformers>=4.35.0",
]

[project.scripts]
migration = "src.main:main"
